--- a/packages/memory-cache/package.json
+++ b/packages/memory-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-memorycache",
-  "version": "0.0.1-beta5",
+  "version": "0.0.1-beta9",
   "description": "TypeScript classes for caching utilities from in memory",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -31,8 +31,8 @@
     "test": "npm run test-only",
     "test-only": "jest --coverage",
     "test:watch": "jest --watch",
-    "test-basic": "jest",
-    "test-azure": "jest --rootDir=./ --config=./jest/jest.azure.config.js",
+    "test-main": "jest",
+    "test-basic": "jest --rootDir=./ --config=./jest/jest.basic.config.js",
     "publish-npm": "npm run clean && npm run build-prod && npm publish"
   },
   "author": "Mitch Chiles <mitchchiles@gmail.com>",
@@ -50,6 +50,6 @@
     "winston-daily-rotate-file": "~1.7.2",
     "nconf": "~0.10.0",
     "moment": "^2.24.0",
-    "tsdatautils-core": "0.0.1-beta8"
+    "tsdatautils-core": "0.0.1-beta9"
   }
 }
