--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-core",
-  "version": "0.0.1-beta9",
+  "version": "0.0.1-beta10",
   "description": "TypeScript core classes for the other data utilities",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -19,7 +19,10 @@
     "tslint-microsoft-contrib": "~5.0.2",
     "tsutils": "~2.18.0",
     "typescript": "~2.6.2",
-    "ts-jest": "~22.4.1"
+    "ts-jest": "~22.4.1",
+    "winston": "2.3.0",
+    "winston-daily-rotate-file": "~1.7.2",
+    "nconf": "~0.10.0"
   },
   "scripts": {
     "clean": "rimraf coverage build tmp logs",
@@ -46,9 +49,6 @@
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
     "tslib": "~1.8.1",
-    "winston": "2.3.0",
-    "winston-daily-rotate-file": "~1.7.2",
-    "nconf": "~0.10.0",
     "moment": "^2.24.0"
   }
 }
