--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-core",
-  "version": "0.0.1-beta10",
+  "version": "0.0.1-beta12",
   "description": "TypeScript core classes for the other data utilities",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -20,8 +20,6 @@
     "tsutils": "~2.18.0",
     "typescript": "~2.6.2",
     "ts-jest": "~22.4.1",
-    "winston": "2.3.0",
-    "winston-daily-rotate-file": "~1.7.2",
     "nconf": "~0.10.0"
   },
   "scripts": {
@@ -49,6 +47,8 @@
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
     "tslib": "~1.8.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "winston": "2.3.0",
+    "winston-daily-rotate-file": "~1.7.2"
   }
 }
