--- a/packages/azure-table-storage/package.json
+++ b/packages/azure-table-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-azuretablestorage",
-  "version": "0.0.1-beta17",
+  "version": "0.0.1-beta21",
   "description": "TypeScript utilities for Azure Table Storage",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -36,6 +36,8 @@
     "test:watch": "jest --watch",
     "test-basic": "jest",
     "test-azure": "jest --rootDir=./ --config=./jest/jest.azure.config.js",
+    "test-azure-table": "jest --rootDir=./ --config=./jest/jest.azuretable.config.js",
+    "test-azure-blob": "jest --rootDir=./ --config=./jest/jest.azureblob.config.js",
     "publish-npm": "npm run clean && npm run build-prod && npm publish"
   },
   "author": "Mitch Chiles <mitchchiles@gmail.com>",
@@ -48,7 +50,7 @@
   },
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
-    "tsdatautils-core": "^0.0.1-beta17",
+    "tsdatautils-core": "0.0.1-beta21",
     "tslib": "~1.8.1",
     "azure-storage": "^2.10.2",
     "moment": "^2.24.0"
