--- a/packages/azure-table-storage/package.json
+++ b/packages/azure-table-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-azuretablestorage",
-  "version": "0.0.1-beta22",
+  "version": "0.0.1",
   "description": "TypeScript utilities for Azure Table Storage",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -50,7 +50,7 @@
   },
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
-    "tsdatautils-core": "0.0.1-beta22",
+    "tsdatautils-core": "0.0.1",
     "tslib": "~1.8.1",
     "azure-storage": "^2.10.2",
     "moment": "^2.24.0"
