--- a/packages/redis-cache/package.json
+++ b/packages/redis-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-rediscache",
-  "version": "0.0.1-beta21",
+  "version": "0.0.1",
   "description": "TypeScript data utilities for redis",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -53,6 +53,6 @@
     "redis": "^2.8.0",
     "util": "^0.11.1",
     "tslib": "~1.8.1",
-    "tsdatautils-core": "0.0.1-beta21"
+    "tsdatautils-core": "0.0.1"
   }
 }
