--- a/packages/azure-table-storage/package.json
+++ b/packages/azure-table-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-azuretablestorage",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "TypeScript utilities for Azure Table Storage",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -11,7 +11,6 @@
   "devDependencies": {
     "@types/jest": "~22.2.0",
     "@types/node": "~8.5.8",
-    "@types/winston": "~2.3.7",
     "@types/nconf": "~0.0.37",
     "jest": "~22.4.1",
     "rimraf": "~2.6.2",
@@ -20,8 +19,7 @@
     "tsutils": "~2.18.0",
     "typescript": "~2.6.2",
     "ts-jest": "~22.4.1",
-    "winston": "2.3.0",
-    "winston-daily-rotate-file": "~1.7.2",
+    "winston-daily-rotate-file": "3.8.0",
     "nconf": "~0.10.0"
   },
   "scripts": {
@@ -50,9 +48,11 @@
   },
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
-    "tsdatautils-core": "0.0.5",
+    "tsdatautils-core": "0.0.6",
     "tslib": "~1.8.1",
     "azure-storage": "^2.10.2",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "winston": "3.2.1",
+    "applicationinsights": "1.3.1"
   }
 }
