--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-core",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "TypeScript core classes for the other data utilities",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -11,7 +11,6 @@
   "devDependencies": {
     "@types/jest": "~22.2.0",
     "@types/node": "~8.5.8",
-    "@types/winston": "~2.3.7",
     "@types/nconf": "~0.0.37",
     "jest": "~22.4.1",
     "rimraf": "~2.6.2",
@@ -48,7 +47,8 @@
   "dependencies": {
     "tslib": "~1.8.1",
     "moment": "^2.24.0",
-    "winston": "2.3.0",
-    "winston-daily-rotate-file": "~1.7.2"
+    "winston": "3.2.1",
+    "winston-transport": "4.3.0",
+    "winston-daily-rotate-file": "3.8.0"
   }
 }
