--- a/packages/memory-cache/package.json
+++ b/packages/memory-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-memorycache",
-  "version": "0.0.2",
+  "version": "0.0.6",
   "description": "TypeScript classes for caching utilities from in memory",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -11,7 +11,6 @@
   "devDependencies": {
     "@types/jest": "~22.2.0",
     "@types/node": "~8.5.8",
-    "@types/winston": "~2.3.7",
     "@types/nconf": "~0.0.37",
     "jest": "~22.4.1",
     "rimraf": "~2.6.2",
@@ -20,8 +19,7 @@
     "tsutils": "~2.18.0",
     "typescript": "~2.6.2",
     "ts-jest": "~22.4.1",
-    "winston": "2.3.0",
-    "winston-daily-rotate-file": "~1.7.2",
+    "winston-daily-rotate-file": "3.8.0",
     "nconf": "~0.10.0"
   },
   "scripts": {
@@ -50,6 +48,7 @@
   "dependencies": {
     "tslib": "~1.8.1",
     "moment": "^2.24.0",
-    "tsdatautils-core": "0.0.1"
+    "tsdatautils-core": "0.0.6",
+    "winston": "3.2.1"
   }
 }
