--- a/packages/redis-cache/package.json
+++ b/packages/redis-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-rediscache",
-  "version": "0.0.1",
+  "version": "0.0.6",
   "description": "TypeScript data utilities for redis",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -11,7 +11,6 @@
   "devDependencies": {
     "@types/jest": "~22.2.0",
     "@types/node": "~8.5.8",
-    "@types/winston": "~2.3.7",
     "@types/nconf": "~0.0.37",
     "@types/redis": "^2.8.11",
     "jest": "~22.4.1",
@@ -21,8 +20,7 @@
     "tsutils": "~2.18.0",
     "typescript": "~2.6.2",
     "ts-jest": "~22.4.1",
-    "winston": "2.3.0",
-    "winston-daily-rotate-file": "~1.7.2",
+    "winston-daily-rotate-file": "3.8.0",
     "nconf": "~0.10.0"
   },
   "scripts": {
@@ -53,6 +51,7 @@
     "redis": "^2.8.0",
     "util": "^0.11.1",
     "tslib": "~1.8.1",
-    "tsdatautils-core": "0.0.1"
+    "winston": "3.2.1",
+    "tsdatautils-core": "0.0.6"
   }
 }
