--- a/packages/azure-table-storage/package.json
+++ b/packages/azure-table-storage/package.json
@@ -53,6 +53,7 @@
     "azure-storage": "^2.10.2",
     "moment": "^2.24.0",
     "winston": "3.2.1",
+    "winston-transport": "4.3.0",
     "applicationinsights": "1.3.1"
   }
 }
