--- a/packages/azure-storage-queue/package.json
+++ b/packages/azure-storage-queue/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tsdatautils-core",
-  "version": "0.0.88",
-  "description": "TypeScript core classes for the other data utilities",
+  "name": "tsdatautils-azurestoragequeue",
+  "version": "0.0.8",
+  "description": "TypeScript utilities for Azure Storage Queue",
   "engineStrict": true,
   "main": "./build/src/main.js",
   "types": "./build/src/main.d.ts",
@@ -10,15 +10,15 @@
   },
   "devDependencies": {
     "@types/jest": "~22.2.0",
-    "@types/node": "~8.5.8",
+    "@types/node": "~14.14.37",
     "@types/nconf": "~0.0.37",
-    "jest": "~22.4.1",
+    "jest": "~26.6.3",
     "rimraf": "~2.6.2",
+    "ts-jest": "~26.5.4",
     "tslint": "~5.9.1",
-    "tslint-microsoft-contrib": "~5.0.2",
-    "tsutils": "~2.18.0",
-    "typescript": "~2.6.2",
-    "ts-jest": "~22.4.1",
+    "tsutils": "~3.21.0",
+    "typescript": "~4.2.3",
+    "winston-daily-rotate-file": "3.8.0",
     "nconf": "~0.10.0"
   },
   "scripts": {
@@ -32,7 +32,7 @@
     "test-only": "jest --coverage",
     "test:watch": "jest --watch",
     "test-basic": "jest",
-    "test-azure": "jest --rootDir=./ --config=./jest/jest.azure.config.js",
+    "test-azurestoragequeue": "jest --rootDir=./ --config=./jest/jest.azurestoragequeue.config.js",
     "publish-npm": "npm run clean && npm run build-prod && npm publish"
   },
   "author": "Mitch Chiles <mitchchiles@gmail.com>",
@@ -45,9 +45,16 @@
   },
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
-    "tslib": "~1.8.1",
+    "@azure/storage-queue": "~12.4.0",
+    "applicationinsights": "1.3.1",
+    "base-64": "~1.0.0",
+    "js-base64": "^3.6.0",
     "moment": "^2.24.0",
+    "node-gzip": "~1.1.2",
+    "tsdatautils-core": "0.0.88",
+    "tslib": "~1.8.1",
+    "utf8": "~3.0.0",
     "winston": "3.2.1",
-    "winston-daily-rotate-file": "3.8.0"
+    "winston-transport": "4.3.0"
   }
 }
