--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-core",
-  "version": "0.0.95",
+  "version": "0.1.0",
   "description": "TypeScript core classes for the other data utilities",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -9,16 +9,16 @@
     "node": ">= 8.9.0"
   },
   "devDependencies": {
-    "@types/jest": "~22.2.0",
-    "@types/node": "~8.5.8",
+    "@types/jest": "~26.0.22",
+    "@types/node": "^12.12.53",
     "@types/nconf": "~0.0.37",
-    "jest": "~22.4.1",
+    "jest": "~26.6.3",
     "rimraf": "~2.6.2",
-    "tslint": "~5.9.1",
-    "tslint-microsoft-contrib": "~5.0.2",
-    "tsutils": "~2.18.0",
-    "typescript": "~2.6.2",
-    "ts-jest": "~22.4.1",
+    "tslint": "~6.1.3",
+    "tslint-microsoft-contrib": "~6.2.0",
+    "tsutils": "~3.21.0",
+    "typescript": "~4.2.3",
+    "ts-jest": "~26.5.4",
     "nconf": "~0.10.0"
   },
   "scripts": {
@@ -45,9 +45,11 @@
   },
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
-    "tslib": "~1.8.1",
+    "tslib": "~2.1.0",
     "moment": "^2.24.0",
     "winston": "3.2.1",
-    "winston-daily-rotate-file": "3.8.0"
+    "winston-daily-rotate-file": "3.8.0",
+    "p-throttle": "~4.1.1",
+    "concurrent-queue": "7.0.2"
   }
 }
