--- a/packages/azure-storage-queue/package.json
+++ b/packages/azure-storage-queue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsdatautils-azurestoragequeue",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "TypeScript utilities for Azure Storage Queue",
   "engineStrict": true,
   "main": "./build/src/main.js",
@@ -50,8 +50,8 @@
     "js-base64": "^3.6.0",
     "moment": "^2.24.0",
     "node-gzip": "~1.1.2",
-    "tsdatautils-core": "0.0.9",
-    "tslib": "~1.8.1",
+    "tsdatautils-core": "~0.1.2",
+    "tslib": "~2.1.0",
     "winston": "3.2.1",
     "winston-transport": "4.3.0"
   }
