--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,27 +6,27 @@
   "main": "./build/src/main.js",
   "types": "./build/src/main.d.ts",
   "engines": {
-    "node": ">= 8.9.0"
+    "node": ">= 18.0.0"
   },
   "devDependencies": {
-    "@types/jest": "~26.0.22",
-    "@types/node": "^12.12.53",
-    "@types/nconf": "~0.0.37",
-    "jest": "~26.6.3",
-    "rimraf": "~2.6.2",
-    "tslint": "~6.1.3",
-    "tslint-microsoft-contrib": "~6.2.0",
-    "tsutils": "~3.21.0",
-    "typescript": "~4.2.3",
-    "ts-jest": "~26.5.4",
-    "nconf": "~0.10.0"
+    "@types/jest": "^30.0.0",
+    "@types/nconf": "^0.10.7",
+    "@types/node": "^24.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint": "^9.18.0",
+    "jest": "^30.0.5",
+    "nconf": "^0.12.1",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.9.2"
   },
   "scripts": {
     "clean": "rimraf coverage build tmp logs",
     "build": "tsc --project tsconfig.release.json",
     "build-prod": "tsc --project tsconfig.release.json",
-    "lint": "tslint -t stylish --project \"tsconfig.json\"",
-    "lint-autofix": "tslint -t stylish --fix --project \"tsconfig.json\"",
+    "lint": "eslint src/**/*.ts __tests__/**/*.ts",
+    "lint-autofix": "eslint src/**/*.ts __tests__/**/*.ts --fix",
     "pretest": "npm run lint --force",
     "test": "npm run test-only",
     "test-only": "jest --coverage",
@@ -45,11 +45,11 @@
   },
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
-    "tslib": "~2.1.0",
-    "moment": "^2.24.0",
-    "winston": "3.2.1",
-    "winston-daily-rotate-file": "3.8.0",
-    "p-throttle": "~4.1.1",
-    "concurrent-queue": "7.0.2"
+    "concurrent-queue": "^7.0.2",
+    "moment": "^2.30.1",
+    "p-throttle": "^4.1.1",
+    "tslib": "^2.8.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
