Update package.json and make sure core package has files to publish

--- a/packages/core/.npmignore
+++ b/packages/core/.npmignore
@@ -36,15 +36,17 @@ webpack.prod.json
 tsconfig.json
 tsconfig.release.json
 
-# Source Files
+# Source Files (only exclude source, not build output)
 src/
 
 # Linting
 tslint.json
+eslint.config.js
+.eslintcache
 
 # Testing
 jest/
-jest.config.json
+jest.config.js
 __tests__/
 
 # Misc
