--- a/packages/memory-cache/package.json
+++ b/packages/memory-cache/package.json
@@ -1,33 +1,37 @@
 {
   "name": "tsdatautils-memorycache",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "description": "TypeScript classes for caching utilities from in memory",
   "engineStrict": true,
   "main": "./build/src/main.js",
   "types": "./build/src/main.d.ts",
+  "files": [
+    "build/",
+    "LICENSE"
+  ],
   "engines": {
-    "node": ">= 8.9.0"
+    "node": ">= 18.0.0"
   },
   "devDependencies": {
-    "@types/jest": "~22.2.0",
-    "@types/node": "~8.5.8",
-    "@types/nconf": "~0.0.37",
-    "jest": "~22.4.1",
-    "rimraf": "~2.6.2",
-    "tslint": "~5.9.1",
-    "tslint-microsoft-contrib": "~5.0.2",
-    "tsutils": "~2.18.0",
-    "typescript": "~2.6.2",
-    "ts-jest": "~22.4.1",
-    "winston-daily-rotate-file": "3.8.0",
-    "nconf": "~0.10.0"
+    "@types/jest": "^30.0.0",
+    "@types/nconf": "^0.10.7",
+    "@types/node": "^24.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint": "^9.18.0",
+    "jest": "^30.0.5",
+    "nconf": "^0.12.1",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.9.2",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "scripts": {
     "clean": "rimraf coverage build tmp logs",
     "build": "tsc --project tsconfig.release.json",
     "build-prod": "tsc --project tsconfig.release.json",
-    "lint": "tslint -t stylish --project \"tsconfig.json\"",
-    "lint-autofix": "tslint -t stylish --fix --project \"tsconfig.json\"",
+    "lint": "eslint src/**/*.ts __tests__/**/*.ts",
+    "lint-autofix": "eslint src/**/*.ts __tests__/**/*.ts --fix",
     "pretest": "npm run lint --force",
     "test": "npm run test-only",
     "test-only": "jest --coverage",
@@ -46,9 +50,9 @@
   },
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
-    "tslib": "~1.8.1",
-    "moment": "^2.24.0",
-    "tsdatautils-core": "0.0.7",
-    "winston": "3.2.1"
+    "tslib": "^2.8.1",
+    "moment": "^2.30.1",
+    "tsdatautils-core": "0.2.1",
+    "winston": "^3.17.0"
   }
 }
