--- a/packages/azure-storage-queue/package.json
+++ b/packages/azure-storage-queue/package.json
@@ -1,32 +1,37 @@
 {
   "name": "tsdatautils-azurestoragequeue",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "TypeScript utilities for Azure Storage Queue",
   "engineStrict": true,
   "main": "./build/src/main.js",
   "types": "./build/src/main.d.ts",
+  "files": [
+    "build/",
+    "LICENSE"
+  ],
   "engines": {
-    "node": ">= 8.9.0"
+    "node": ">= 18.0.0"
   },
   "devDependencies": {
-    "@types/jest": "~22.2.0",
-    "@types/node": "~14.14.37",
-    "@types/nconf": "~0.0.37",
-    "jest": "~26.6.3",
-    "rimraf": "~2.6.2",
-    "ts-jest": "~26.5.4",
-    "tslint": "~5.9.1",
-    "tsutils": "~3.21.0",
-    "typescript": "~4.2.3",
-    "winston-daily-rotate-file": "3.8.0",
-    "nconf": "~0.10.0"
+    "@types/jest": "^30.0.0",
+    "@types/nconf": "^0.10.7",
+    "@types/node": "^24.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint": "^9.18.0",
+    "jest": "^30.0.5",
+    "nconf": "^0.12.1",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.9.2",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "scripts": {
     "clean": "rimraf coverage build tmp logs",
     "build": "tsc --project tsconfig.release.json",
     "build-prod": "tsc --project tsconfig.release.json",
-    "lint": "tslint -t stylish --project \"tsconfig.json\"",
-    "lint-autofix": "tslint -t stylish --fix --project \"tsconfig.json\"",
+    "lint": "eslint src/**/*.ts __tests__/**/*.ts",
+    "lint-autofix": "eslint src/**/*.ts __tests__/**/*.ts --fix",
     "pretest": "npm run lint --force",
     "test": "npm run test-only",
     "test-only": "jest --coverage",
@@ -45,14 +50,14 @@
   },
   "homepage": "https://github.com/MitchCodes/Typescript-DataUtils#about",
   "dependencies": {
-    "@azure/storage-queue": "~12.4.0",
-    "applicationinsights": "1.3.1",
-    "js-base64": "^3.6.0",
-    "moment": "^2.24.0",
-    "node-gzip": "~1.1.2",
-    "tsdatautils-core": "~0.1.2",
-    "tslib": "~2.1.0",
-    "winston": "3.2.1",
-    "winston-transport": "4.3.0"
+    "@azure/storage-queue": "^12.27.0",
+    "applicationinsights": "^3.4.0",
+    "js-base64": "^3.7.7",
+    "moment": "^2.30.1",
+    "node-gzip": "^1.1.2",
+    "tsdatautils-core": "0.2.1",
+    "tslib": "^2.8.1",
+    "winston": "^3.17.0",
+    "winston-transport": "^4.9.0"
   }
 }
